--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://training-db.ck1ayq0lncmp.ap-south-1.rds.amazonaws.com:3306/keerthana_db
-spring.datasource.username=keerthana
-spring.datasource.password=keerthana
+spring.datasource.url=jdbc:mysql://database-001.c6p37bdo1wjc.ap-south-1.rds.amazonaws.com:3306/keerthana_db
+spring.datasource.username=admin
+spring.datasource.password=NiroshUganya
+server.port=8000
